--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 solutions/hands/build
 ./solutions/local.properties
 ./solutions/hands/local.properties
+./solutions/local.properties
+./solutions/hands/local.properties
