--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 solutions/hands/build
 ./solutions/local.properties
 ./solutions/hands/local.properties
+
+# Gradle files
+solutions/.gradle/
+
+# IntelliJ
+solutions/.idea/
+solutions/hands/.idea
