--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 solutions/hands/build
-./solutions/local.properties
-./solutions/hands/local.properties
+solutions/local.properties
+solutions/hands/local.properties
 
 # Gradle files
 solutions/.gradle/
