--- a/solutions/hands/build.gradle
+++ b/solutions/hands/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
+    implementation 'com.itextpdf:itextpdf:5.5.13.3'
+    implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
