--- a/solutions/hands/src/main/AndroidManifest.xml
+++ b/solutions/hands/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-feature android:name="android.hardware.camera" />
     <!-- For logging solution events -->
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />"
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
