--- a/solutions/hands/src/main/cpp/CMakeLists.txt
+++ b/solutions/hands/src/main/cpp/CMakeLists.txt
@@ -16,21 +16,13 @@ project("hands")
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-        utils
+             vectorUtils
 
-        # Sets the library as a shared library.
-        SHARED
+             # Sets the library as a shared library.
+             SHARED
 
-        # Provides a relative path to your source file(s).
-        utils.cpp)
-
-add_library(
-        vectorUtils
-
-        SHARED
-
-        vectorUtils.cpp
-)
+             # Provides a relative path to your source file(s).
+        vectorUtils.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -39,19 +31,19 @@ add_library(
 # completing its build.
 
 find_library( # Sets the name of the path variable.
-        log-lib
+              log-lib
 
-        # Specifies the name of the NDK library that
-        # you want CMake to locate.
-        log)
+              # Specifies the name of the NDK library that
+              # you want CMake to locate.
+              log )
 
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-        hands
+                       hands
 
-        # Links the target library to the log library
-        # included in the NDK.
-        ${log-lib})
+                       # Links the target library to the log library
+                       # included in the NDK.
+                       ${log-lib} )
